--- a/includes/style.css
+++ b/includes/style.css
@@ -35,6 +35,19 @@
 }
 
 /*---------------------------------------*/
+/*CAMBRIDGE*/
+/*---------------------------------------*/
+
+.cambridge-news {
+    margin-top: 2em;
+    background-color:;
+}
+
+.cambridge-news-list a {
+    color: dimgray;
+}
+
+/*---------------------------------------*/
 /*RESEARCH*/
 /*---------------------------------------*/
 
