--- a/includes/style.css
+++ b/includes/style.css
@@ -62,7 +62,15 @@
 }
 
 .cambridge-videos {
-    background-color: darkgrey
+    background-color: darkgrey;
+}
+
+.centered {
+    position: absolute;
+    margin: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /*---------------------------------------*/
