--- a/includes/style.css
+++ b/includes/style.css
@@ -65,8 +65,12 @@
     background-color: darkgrey;
 }
 
-.centered {
+.cambridge-videos h4{
+    color: whitesmoke;
 }
+
+
+
 
 /*---------------------------------------*/
 /*RESEARCH*/
