--- a/includes/style.css
+++ b/includes/style.css
@@ -69,18 +69,18 @@
     color: whitesmoke;
 }
 
-.aspect-ratio{
-position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 51%;
+.aspect-ratio { 
+    padding-top: 57.7%;
+    height: 0;
+    position:relative; 
 }
 
-.aspect-ratio iframe {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0; top: 0;
+iframe {
+    position: absolute; 
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0; 
 }
 
 
